<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kiwi</string>
    <string name="action_advanced_options">Delete courses</string>
    <string name="hello_world">Hello world!</string>
    <string name="import_courses_nothing_to_import">No compatible events were found. Try adding courses manually!</string>
    <string name="import_courses_activity_label">Import courses</string>


    <string name="short_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="medium_lorem_ipsum">"Pellentesque dictum sit amet sapien in faucibus. Curabitur fermentum, nulla quis placerat imperdiet, est nisi placerat arcu, non ornare erat justo at enim. Nam vitae porttitor sem. Quisque non quam nisi. Proin quis urna id elit ultrices cursus non tempus dolor"</string>
    <string name="long_lorem_ipsum">"Mauris dapibus convallis massa, vitae ultrices est ultricies ut. Nam porttitor et metus ac bibendum. Nam at justo vitae felis lacinia ultrices laoreet ut arcu. Nam ac purus et turpis convallis mollis. Integer lorem eros, hendrerit imperdiet interdum vitae, sagittis eget ipsum. Donec dignissim tortor at felis fringilla, sed dignissim diam vulputate. Nam sit amet facilisis massa. Suspendisse posuere quam quis augue dapibus venenatis."</string>

    <string name="add_assignment_title">Add an Assignment/Exam</string>
    <string name="notes">Notes</string>
    <string name="notes_heading">Notes:</string>
    <string name="textbooks_heading">Textbooks:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string-array name="assignment_types">
        <item >Assignment</item>
        <item >Reading</item>
        <item >Exam</item>
        <item >Lab</item>
        <item >Paper</item>
        <item >Presentation</item>
        <item >Project</item>
    </string-array>
    <string name="default_assignment_type">Assignment type (optional)</string>
    <string name="assignment_tile_popup_button_title">Options</string>
    <string name="textbook">Textbook</string>
    <string name="overview_empty_icon_description">No assignments are visible.</string>
    <string name="overview_no_assignments">No assignments found.</string>
    <string name="default_course">Course (optional)</string>
    <string name="assignment_tile_popup_view">View</string>
    <string name="assignment_title_empty_error">You must enter a name</string>
    <string-array name="course_color_strings">
        <item >orange</item>
        <item >green</item>
        <item >blue</item>
        <item >red</item>
        <item >purple</item>
        <item >yellow</item>
    </string-array>
    <string name="undo">Undo</string>
    <string name="retry">Retry</string>
    
    <string-array name="reminder_entries">
        <item>Don\'t remind me</item>
        <item>Start 12 hours before due</item>
        <item>Start 1 day before due</item>
        <item>Start 2 days before due</item>
        <item>Start 3 days before due</item>
        <item>Start 5 days before due</item>
        <item>Start 1 week before due</item>
    </string-array>
    <integer-array name="reminder_entry_values">
        <item>-1</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
        <item>72</item>
        <item>120</item>
        <item>168</item>
    </integer-array>
    <string name="presentation_button_string">Jump-start</string>
    <string name="presentation_force_notification">Force notification</string>
    <string name="delete_completed">Delete completed</string>
    
    <string-array name="repetition_entries">
        <item>Repeat weekly</item>
        <item>Repeat bi-weekly</item>
        <item>Repeat monthly</item>
    </string-array>
    <string-array name="repetition_frequencies">
        <item>NULL</item>
        <item>WEEKLY</item>
        <item>BIWEEKLY</item>
        <item>MONTHLY</item>
    </string-array>
</resources>
