<?xml version="1.0" encoding="utf-8"?>
<com.example.android.expandingcells.ExpandingLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expanding_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:visibility="gone">
    
    <TextView 
        android:id="@+id/assignment_notes_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/notes_heading"
        android:textSize="16sp"/>
    
    <TextView
        android:id="@+id/assignment_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/assignment_notes_heading"
        android:autoLink="web" />

    <TextView 
        android:id="@+id/assignment_textbooks_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/assignment_notes"
    	android:text="@string/textbooks_heading"
    	android:textSize="16sp"/>
    
    <TextView 
        android:id="@+id/assignment_textbooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/assignment_textbooks_heading"/>
    
    <!-- 
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/assignment_textbooks"
        android:text="Completed" />
    -->
    
    <ImageButton
	    android:id="@+id/deleteButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"
        android:layout_below="@id/assignment_textbooks"
	    android:src="@drawable/ic_5_content_discard"
	    android:background="@null"
	    android:contentDescription="@string/delete" />
    
    <ImageButton
	    android:id="@+id/editButton"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/deleteButton"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"
        android:layout_below="@id/assignment_textbooks"
	    android:src="@drawable/ic_5_content_edit"
	    android:background="@null"
	    android:contentDescription="@string/edit" />
    
<!--  
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"
        android:layout_below="@id/assignment_textbooks"
        android:text="@string/delete" />
      
    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/deleteButton"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"
        android:layout_below="@id/assignment_textbooks"
        android:text="@string/edit"/>
-->
</com.example.android.expandingcells.ExpandingLayout>
