<!--
 Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/item_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingBottom="0dp" />

            <TextView
                android:id="@+id/assignment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="0dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/assignment_name"
                style="@style/AssignmentTileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <!-- placeholder -->

            <TextView
                android:id="@+id/assignment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingTop="0dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:descendantFocusability="blocksDescendants" >

            <CheckBox
                android:id="@+id/completed_check_box"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="Completed"
                android:textSize="18sp" />
            
            <ImageView
                android:id="@+id/assignment_tile_reminders_identifier"
                style="@style/AssignmentTileSmallIcon"
                android:layout_toLeftOf="@+id/assignment_tile_textbook_identifier"
                android:contentDescription="Reminders"
                android:src="@drawable/ic_reminders" />

            <ImageView
                android:id="@+id/assignment_tile_textbook_identifier"
                style="@style/AssignmentTileSmallIcon"
                android:layout_toLeftOf="@+id/assignment_tile_notes_identifier"
                android:contentDescription="@string/textbook"
                android:src="@drawable/textbook_icon" />

            <ImageView
                android:id="@+id/assignment_tile_notes_identifier"
                style="@style/AssignmentTileSmallIcon"
                android:layout_toLeftOf="@+id/assignment_tile_popup_button"
                android:contentDescription="@string/notes"
                android:src="@drawable/ic_4_collections_view_as_list" />

            <ImageButton
                android:id="@+id/assignment_tile_popup_button"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/list_selection_background"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical|right"
                android:padding="12dp"
                android:scaleType="center"
                android:src="@drawable/ic_action_overflow"
                android:text="@string/assignment_tile_popup_button_title" />

        </RelativeLayout>
        
    </LinearLayout>
</LinearLayout>